--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
       ></button>
     </div>
 
-    <script src="./src/index.js"></script>
+    <script src="gallery-items.js" type="module"></script>
   </body>
 </html>
